--- a/data/gameserverlauncher.ini
+++ b/data/gameserverlauncher.ini
@@ -5,9 +5,18 @@ port = 9001
 [gameserver]
 dir = C:\Games\Tribes_Ascend_Parting_Gifts\Binaries\Win32
 controller_dll = TAMods-Server.dll
+
+# OOTB Stock Config
 #   controller_config = gamesettings\ootb\serverconfig.lua
+
+# Rabbit Config
 controller_config = gamesettings\rabbit\serverconfig.lua
 
-# To run a GOTY server you should run the download_gotylike.py script
-# and replace the controller_config setting above with this one:
+# GOTY Stock Config
 #   controller_config = gamesettings\gotylike\serverconfig.lua
+
+# Mixer Config
+#   controller_config = gamesettings\mixers\serverconfig.lua
+
+# PUG Config (Australian)
+#   controller_config = gamesettings\pugAU\serverconfig.lua
