Added Mixer PUG Preset and Mixer Testing Preset.
Using GOTY as a base for Mixer PUG and OOTB as base for testing preset.

--- a/data/gameserverlauncher.ini
+++ b/data/gameserverlauncher.ini
@@ -15,8 +15,14 @@ controller_config = gamesettings\rabbit\serverconfig.lua
 # GOTY Stock Config
 #   controller_config = gamesettings\gotylike\serverconfig.lua
 
+# PUG Config (Australian)
+#   controller_config = gamesettings\pugAU\serverconfig.lua
+
 # Mixer Config
 #   controller_config = gamesettings\mixers\serverconfig.lua
 
-# PUG Config (Australian)
-#   controller_config = gamesettings\pugAU\serverconfig.lua
+# Mixer PUG Config
+#   controller_config = gamesettings\pugNAmixer\serverconfig.lua
+
+# Mixer Test Config
+#   controller_config = gamesettings\mixerTesting\serverconfig.lua
