Air Arena Config Added

--- a/data/gameserverlauncher.ini
+++ b/data/gameserverlauncher.ini
@@ -10,7 +10,10 @@ controller_dll = TAMods-Server.dll
 #   controller_config = gamesettings\ootb\serverconfig.lua
 
 # Rabbit Config
-controller_config = gamesettings\rabbit\serverconfig.lua
+# controller_config = gamesettings\rabbit\serverconfig.lua
+
+# Air Arena Config
+controller_config = gamesettings\airArena\serverconfig.lua
 
 # GOTY Stock Config
 #   controller_config = gamesettings\gotylike\serverconfig.lua
